--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-clear": "~0.2.1"
   },
   "scripts": {
-    "test": "grunt test --verbose"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
