--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "knockout.validation",
-  "version": "2.0.0-pre.1",
+  "version": "2.0.0-pre.3",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "Dist/knockout.validation.js",
-  "dependencies": {
-    "knockout": "~3.0.0"
-  },
+  "files": [ "Dist/knockout.validation.js" ],
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.9",
