--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "2.0.0-pre.3",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "Dist/knockout.validation.js",
-  "files": [ "Dist/knockout.validation.js" ],
+  "files": ["Dist/knockout.validation.js"],
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.9",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-qunit": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-clear": "~0.2.1"
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-clear": "~0.2.1",
+    "jshint-stylish": "~1.0.0"
   },
   "scripts": {
     "test": "grunt test"
