Change project structure
Renamed directories to use lowecase letters. Some of the renames were
made to have a structure similar to other repositories, eg. dist directory.

* Rename directory Tests → test
* Rename directory Dist → dist
* Rename directory Src → src
* Rename directory Localization → localization
* Move directory Lib → test/lib because its usage is for tests only
* Upgrade test libraries

Closes #488

--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,13 @@
 {
   "name": "knockout-validation",
   "description": "A KnockoutJS Plugin for model and property validation",
-  "main": "Dist/knockout.validation.js",
+  "main": "dist/knockout.validation.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
-    "Lib",
-    "Src",
-    "Scripts",
-    "Tests",
+    "src",
+    "test",
     "gruntfile.js"
   ],
   "keywords": [
