--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "knockout.validation",
-  "version": "2.0.0-pre.3",
+  "version": "2.0.0",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "dist/knockout.validation.js",
-  "files": ["dist/knockout.validation.js"],
+  "files": ["dist/knockout.validation.js", "localization", "CONTRIBUTING.md"],
   "dependencies": {
     "knockout": ">=2.3.0"
   },
