--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "2.0.0",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "dist/knockout.validation.js",
-  "files": ["dist/knockout.validation.js", "localization", "CONTRIBUTING.md"],
+  "files": ["dist", "localization", "CONTRIBUTING.md"],
   "dependencies": {
     "knockout": ">=2.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-qunit": "~0.5.2",
