--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "knockout-validation",
+  "version": "2.0.1",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "dist/knockout.validation.js",
   "license": "MIT",
