--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.4",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "dist/knockout.validation.js",
+  "types": "dist/knockout.validation.d.ts",
   "files": [
     "dist",
     "localization",
