--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "2.0.3",
   "description": "A KnockoutJS Plugin for model and property validation",
   "main": "dist/knockout.validation.js",
-  "files": ["dist", "localization", "CONTRIBUTING.md"],
+  "files": [
+    "dist",
+    "localization",
+    "CONTRIBUTING.md"
+  ],
   "peerDependencies": {
     "knockout": ">=2.3.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-uglify": "~0.8.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-qunit": "~0.5.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-clear": "~0.2.1",
-    "jshint-stylish": "~1.0.1"
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-qunit": "^3.1.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-clear": "^0.2.1",
+    "jshint-stylish": "^2.2.1"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt",
+    "lint": "grunt jshint"
   },
   "repository": {
     "type": "git",
